--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,11 +7,11 @@
     <div class="error-message" *ngIf="isInvalid">请输入10位有效数字单号</div>
   </section>
 
-  <section class="search-tracking-list">
+  <section class="search-tracking-list" *ngIf="trackingList.length !== 0">
     <ul>
       <li *ngFor="let tracking of trackingList">
-        <strong>{{tracking?.date}}</strong>
-        <strong>{{tracking?.status}}</strong>
+        <span class="tracking-date">{{tracking?.date}}</span>
+        <strong class="tracking-status">{{tracking?.status}}</strong>
       </li>
     </ul>
   </section>
